--- a/pages/Login/login.wxss
+++ b/pages/Login/login.wxss
@@ -2,3 +2,43 @@
 .butons{
   padding-top: 50rpx;
 }
+
+.login-container{
+  padding: 0 10%;
+  height: 300rpx;
+  width: 580rpx;
+}
+.title{
+  font-size: large;
+  text-align: center;
+  padding-top: 10%;
+  font-weight: bold;
+}
+.login-box{
+  margin-top: 10%;
+  padding: 10% 5%;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 4px #888888;
+}
+.login-box>input{
+  margin: 5% 0 8% 0;
+  border-bottom: 1rpx solid lightgray;
+}
+.login-btn{
+  width: 100%!important;
+  background-color: #2f6afd;
+  color: white;
+  font-weight: normal;
+}
+.login-message{
+  text-align: center;
+  font-size: 12px;
+  color: gray;
+}
+.three-line{
+  margin: 8% 0;
+  text-align: center;
+  font-size: 12px;
+  color: gray;
+}
