--- a/pages/sHome/Repair/repair.wxss
+++ b/pages/sHome/Repair/repair.wxss
@@ -1,5 +1,5 @@
 page {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(247, 247, 247);
 }
 .l-form-btn-class{
   display: flex;
@@ -18,14 +18,91 @@ page {
 }
 
 .item{
-  height: 300rpx;
+  height: auto;
   margin-top:10rpx ;
 }
 .item1{
-  height: 200rpx;
+  height: auto;
   margin-top:10rpx ;
 }
 .item2{
   height: 100rpx;
   margin-top:10rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  border-bottom: 1px solid #eee;
+  color: #777;
+  padding-left: 10rpx;
+}
+
+/* pages/form/pages/rules/index.wxss */
+
+.container {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+.group-label {
+  font-size: 28rpx;
+  color: #333;
+  display: flex;
+  box-sizing: border-box;
+  height: 88rpx;
+  align-items: flex-start;
+}
+
+.group-label text, .text-desc {
+  font-size: 28rpx;
+  color: #333;
+  width: 170rpx;
+  padding-left: 25rpx;
+  padding-right: 15rpx;
+  box-sizing: border-box;
+}
+
+.text-desc {
+  display: flex;
+  width: auto;
+  line-height: 88rpx;
+}
+.group-label .l-radio-group, .text-view {
+  display: flex;
+  flex-direction: row;
+}
+
+.text-view {
+  flex-direction: column;
+}
+
+.group-label .l-radio {
+  margin-right: 20rpx;
+}
+
+.textarea-class {
+  /*width:auto !important;*/
+}
+
+.error-text {
+  background: red;
+  color: #fff !important;
+  border-radius: 8rpx;
+  padding: 0 10rpx;
+}
+
+.submit{
+  padding-top: 20rpx;
+}
+
+.demo_line_02{
+  height: 1px;
+  border-top: 1px solid #333;
+  text-align: center;
+}
+.demo_line_02 span{
+  position: relative;
+  top: -8px;
+  background: #777;
+  padding: 0 20px;
 }
