--- a/pages/sHome/s-home.wxml
+++ b/pages/sHome/s-home.wxml
@@ -2,7 +2,7 @@
 <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
     <block wx:for="{{imgUrls}}">
       <swiper-item>
-        <image src="{{item}}" class="slide-image" />
+        <image bindtap="bindtap" src="{{item}}" class="slide-image" />
       </swiper-item>
     </block>
   </swiper>
