--- a/pages/Login/login.wxss
+++ b/pages/Login/login.wxss
@@ -42,3 +42,11 @@
   font-size: 12px;
   color: gray;
 }
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+} 
